--- a/app11/src/main/resources/application-private.properties
+++ b/app11/src/main/resources/application-private.properties
@@ -1,5 +1,5 @@
-cloud.aws.s3.bucket=kh-test2
+cloud.aws.s3.bucket=
 cloud.aws.stack.auto=false
 cloud.aws.region.static=us-east-1
-cloud.aws.credentials.access-key=AKIA4A7XA4IMR3KFX3UD
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
